--- a/bash/config
+++ b/bash/config
@@ -9,5 +9,13 @@ set histdup='all'
 
 PS1="\n\u: \w \$(parse_git_branch) \n➥ "
 
+if [ -f /usr/local/bin/git-completion.sh ]; then
+	# Download from: https://github.com/git/git/blob/master/contrib/completion/git-completion.bash
+	source /usr/local/bin/git-completion.sh
+
+	complete -o default -o nospace -F _git_branch gb
+	complete -o default -o nospace -F _git_checkout gco
+fi
+
 shopt -s histappend
 EVENT_NOKQUEUE=yes
